[project]
name = "fun-chat-ai"
version = "0.1.0"
description = "Have a fun chat with AI,from the terminal"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "py-dotenv>=0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
